# POO-Tema2

./: Abonat.cpp  Abonat.h  Abonat_Skype.cpp  Abonat_Skype.h  Abonat_Skype_Extern.cpp  Abonat_Skype_Extern.h  Abonat_Skype_Romania.cpp  Abonat_Skype_Romania.h  Agenda.cpp  Agenda.h  CMakeLists.txt  Persoana.cpp  Persoana.h  date.in  entities.h  main.cpp
