cmake_minimum_required(VERSION 3.16)
project(untitled7)

set(CMAKE_CXX_STANDARD 20)

add_executable(untitled7 main.cpp Persoana.cpp Persoana.h Abonat.cpp Abonat.h Abonat_Skype.cpp Abonat_Skype.h Abonat_Skype_Romania.cpp Abonat_Skype_Romania.h Abonat_Skype_Extern.cpp Abonat_Skype_Extern.h Agenda.cpp Agenda.h)